--- a/src/pages/front-office/front-office.html
+++ b/src/pages/front-office/front-office.html
@@ -34,6 +34,7 @@
       <div *ngFor="let item of approvedOrders; let i = index">
         <ion-item-divider color="light">
           #{{i+1}} - {{ item.order_NO }}
+          Priority - {{ item.sub_ORDER_PRORITY }}
           <p>
             <ion-item>
               <h2>{{ item.product_NAME }}</h2>
@@ -88,6 +89,7 @@
       <div ion-item *ngFor="let loaded_item of loadedOrders; let i = index" icon-start>
         <ion-item-divider color="light">
             #{{i+1}} - {{ loaded_item.order_NO }}
+            Priority - {{ loaded_item.sub_ORDER_PRORITY }}
           <p>
             <ion-item>
               <!-- <h2>#{{i+1}} - {{ loaded_item.order_NO }}</h2> -->
