--- a/src/pages/orders/orders.html
+++ b/src/pages/orders/orders.html
@@ -48,6 +48,7 @@
       </ion-refresher>
       <button ion-item *ngFor="let item of estimatedOrders; let i = index" (click)="openNavDetailsPage(item,'estimate')" icon-start>
         <h2>#{{i+1}} - {{ item.customer_NAME }}</h2>
+        <h2>Priority # {{ item.order_PRORITY }}</h2>
         <!-- <h3>{{ item.product_NAME }}</h3> -->
         <!-- <h3>Quantity : {{displayIndianNumber(item.total_ORDER_UNIT)}}</h3> -->
         <!-- <p>Total Cost     : {{ displayINR(item.total_COST) }}</p>
@@ -108,6 +109,7 @@
         <p>Sales Rep Id: {{approved_item.sales_REP_ID}}</p>
         <p>Sales Rep : {{approved_item.sales_REP_NAME}}</p> -->
         <h2>#{{i+1}} - {{ approved_item.customer_NAME }}</h2>
+        <h2>Priority # {{ approved_item.order_PRORITY }}</h2>
         <!-- <h3>{{ approved_item.product_NAME }}</h3> -->
         <p>
           <ion-grid>
@@ -161,6 +163,8 @@
         <p>Sales Rep ID : {{rejected_item.sales_REP_ID}}</p>
         <p>Sales Rep : {{rejected_item.sales_REP_NAME}}</p> -->
         <h2>#{{i+1}} - {{ rejected_item.customer_NAME }}</h2>
+        <h2>Priority # {{ rejected_item.order_PRORITY }}</h2>
+        
         <!-- <h3>{{ rejected_item.product_NAME }}</h3> -->
         <p>
           <ion-grid>
