--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -4,7 +4,7 @@
   <ion-tab [root]="estimatePage" tabIcon="cart" tabTitle="Estimate" [ngStyle]="{'color':'blue'}"></ion-tab>
   <ion-tab [root]="ordersPage" tabIcon="book" tabTitle="Orders" [ngStyle]="{'color':'blue'}"></ion-tab>
   <ion-tab [root]="frontOfficePage" tabIcon="clipboard" tabTitle="Front Office" [ngStyle]="{'color':'blue'}"></ion-tab>
-  <ion-tab [root]="loadingPage" tabIcon="cube" tabTitle="Loading" [ngStyle]="{'color':'blue'}"></ion-tab>
+  <ion-tab [root]="loadingPage" tabIcon="cube" tabTitle="Store" [ngStyle]="{'color':'blue'}"></ion-tab>
   <ion-tab [root]="gatePage" tabIcon="person" tabTitle="Gate Pass" [ngStyle]="{'color':'blue'}"></ion-tab>
 </ion-tabs>
 <ion-tabs *ngIf="role == '1'" [color]="'tail'">
@@ -13,7 +13,7 @@
   <ion-tab [root]="estimatePage" tabIcon="cart" tabTitle="Estimate" [ngStyle]="{'color':'blue'}"></ion-tab>
   <ion-tab [root]="ordersPage" tabIcon="book" tabTitle="Orders" [ngStyle]="{'color':'blue'}"></ion-tab>
   <ion-tab [root]="frontOfficePage" tabIcon="clipboard" tabTitle="Front Office" [ngStyle]="{'color':'blue'}"></ion-tab>
-  <ion-tab [root]="loadingPage" tabIcon="cube" tabTitle="Loading" [ngStyle]="{'color':'blue'}"></ion-tab>
+  <ion-tab [root]="loadingPage" tabIcon="cube" tabTitle="Store" [ngStyle]="{'color':'blue'}"></ion-tab>
   <ion-tab [root]="gatePage" tabIcon="person" tabTitle="Gate Pass" [ngStyle]="{'color':'blue'}"></ion-tab>
   <!-- <ion-tab [root]="printPage" tabIcon="person" tabTitle="Util" [ngStyle]="{'color':'blue'}"></ion-tab> -->
 </ion-tabs>
@@ -23,7 +23,7 @@
   <ion-tab [root]="estimatePage" tabIcon="cart" tabTitle="Estimate" [ngStyle]="{'color':'blue'}"></ion-tab>
   <ion-tab [root]="ordersPage" tabIcon="book" tabTitle="Orders" [ngStyle]="{'color':'blue'}"></ion-tab>
   <ion-tab [root]="frontOfficePage" tabIcon="clipboard" tabTitle="Front Office" [ngStyle]="{'color':'blue'}"></ion-tab> -->
-  <ion-tab [root]="loadingPage" tabIcon="cube" tabTitle="Loading" [ngStyle]="{'color':'blue'}"></ion-tab>
+  <ion-tab [root]="loadingPage" tabIcon="cube" tabTitle="Store" [ngStyle]="{'color':'blue'}"></ion-tab>
   <ion-tab [root]="gatePage" tabIcon="person" tabTitle="Gate Pass" [ngStyle]="{'color':'blue'}"></ion-tab>
 </ion-tabs>
 <!-- <ion-tabs *ngIf="role == '2'" [color]="'tail'">
