--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,6 +1,6 @@
 <ion-tabs *ngIf="role == '3'" [color]="'tail'">
   <ion-tab [root]="homePage" tabTitle="Home" tabIcon="home"></ion-tab>
-  <!-- <ion-tab [root]="leadPage" tabIcon="happy" tabTitle="Lead" [ngStyle]="{'color':'blue'}"></ion-tab> -->
+  <ion-tab [root]="leadPage" tabIcon="happy" tabTitle="Lead" [ngStyle]="{'color':'blue'}"></ion-tab>
   <ion-tab [root]="estimatePage" tabIcon="cart" tabTitle="Estimate" [ngStyle]="{'color':'blue'}"></ion-tab>
   <ion-tab [root]="ordersPage" tabIcon="book" tabTitle="Orders" [ngStyle]="{'color':'blue'}"></ion-tab>
   <ion-tab [root]="frontOfficePage" tabIcon="clipboard" tabTitle="Front Office" [ngStyle]="{'color':'blue'}"></ion-tab>
@@ -9,7 +9,7 @@
 </ion-tabs>
 <ion-tabs *ngIf="role == '1'" [color]="'tail'">
   <ion-tab [root]="homePage" tabTitle="Home" tabIcon="home"></ion-tab>
-  <!-- <ion-tab [root]="leadPage" tabIcon="happy" tabTitle="Lead" [ngStyle]="{'color':'blue'}"></ion-tab> -->
+  <ion-tab [root]="leadPage" tabIcon="happy" tabTitle="Lead" [ngStyle]="{'color':'blue'}"></ion-tab>
   <ion-tab [root]="estimatePage" tabIcon="cart" tabTitle="Estimate" [ngStyle]="{'color':'blue'}"></ion-tab>
   <ion-tab [root]="ordersPage" tabIcon="book" tabTitle="Orders" [ngStyle]="{'color':'blue'}"></ion-tab>
   <ion-tab [root]="frontOfficePage" tabIcon="clipboard" tabTitle="Front Office" [ngStyle]="{'color':'blue'}"></ion-tab>
@@ -19,7 +19,7 @@
 </ion-tabs>
 <ion-tabs *ngIf="role == '2'" [color]="'tail'">
   <ion-tab [root]="homePage" tabTitle="Home" tabIcon="home"></ion-tab>
-  <!-- <ion-tab [root]="leadPage" tabIcon="happy" tabTitle="Lead" [ngStyle]="{'color':'blue'}"></ion-tab> -->
+  <ion-tab [root]="leadPage" tabIcon="happy" tabTitle="Lead" [ngStyle]="{'color':'blue'}"></ion-tab>
   <ion-tab [root]="estimatePage" tabIcon="cart" tabTitle="Estimate" [ngStyle]="{'color':'blue'}"></ion-tab>
   <ion-tab [root]="ordersPage" tabIcon="book" tabTitle="Orders" [ngStyle]="{'color':'blue'}"></ion-tab>
   <ion-tab [root]="frontOfficePage" tabIcon="clipboard" tabTitle="Front Office" [ngStyle]="{'color':'blue'}"></ion-tab> -->
