--- a/src/pages/lead/lead.html
+++ b/src/pages/lead/lead.html
@@ -16,7 +16,7 @@
         <ion-segment-button value="new-customer">
           New Customer
         </ion-segment-button>
-        <ion-segment-button value="view" (click)="retrieveCustomers()">
+        <ion-segment-button value="view">
           View Customer
         </ion-segment-button>
         <!-- <ion-segment-button value="Rejected" (click)="retrieveRejectedOrders()">
@@ -63,6 +63,12 @@
         </ion-select>
       </ion-item>
       <ion-item>
+        <ion-label color="selva" stacked floating>State</ion-label>
+        <ion-select [(ngModel)]="customers.address.state" name="state" [compareWith]="">
+          <ion-option *ngFor="let state of state_list" [value]="state.name">{{state.name}} </ion-option>
+        </ion-select>
+      </ion-item>
+      <ion-item>
         <ion-label color="selva" stacked>Pincode</ion-label>
         <ion-input [(ngModel)]="customers.address.pinCode" name="pinCode" type="number"></ion-input>
       </ion-item>
@@ -80,7 +86,7 @@
       </ion-item>
 
       <ion-item>
-        <ion-label color="selva" stacked>GST</ion-label>
+        <ion-label color="selva" stacked>GSTIN</ion-label>
         <ion-input [(ngModel)]="customers.gst_NUMBER" name="gst_NUMBER" type="text"></ion-input>
       </ion-item>
       <ion-item>
@@ -95,18 +101,18 @@
         <ion-item>
           <ion-label color="selva" stacked stacked>Site Name</ion-label>
           <!-- <ion-input [(ngModel)]="customers.cust_NAME" name="cust_NAME" type="text"></ion-input> -->
-          <ion-input [(ngModel)]="customers.site.site_NAME" name="site_NAME" type="text"></ion-input>
+          <ion-input [(ngModel)]="customers.site_NAME" name="site_NAME" type="text"></ion-input>
         </ion-item>
 
         <ion-item>
           <ion-label color="selva" stacked>Site Address</ion-label>
           <!-- <ion-input [(ngModel)]="customers.address" name="address" type="text"></ion-input> -->
-          <ion-input [(ngModel)]="customers.site.address.address" name="site_ADDRESS_ID" type="text"></ion-input>
+          <ion-input [(ngModel)]="customers.site_ADDRESS_ID" name="site_ADDRESS_ID" type="text"></ion-input>
         </ion-item>
 
         <ion-item>
           <ion-label color="selva" stacked floating>City</ion-label>
-          <ion-select [(ngModel)]="customers.site.address.city" name="city" [compareWith]="">
+          <ion-select [(ngModel)]="customers.address.city" name="city" [compareWith]="">
             <ion-option *ngFor="let city of cities" [value]="city.name">{{city.name}} </ion-option>
           </ion-select>
         </ion-item>
@@ -122,35 +128,11 @@
       </ion-item> -->
         <ion-item>
           <ion-label color="selva" stacked>Site Contact Number</ion-label>
-          <ion-input [(ngModel)]="customers.site.site_CONTACT_NUMBER" name="site_CONTACT_NUMBER" type="number"></ion-input>
+          <ion-input [(ngModel)]="customers.site_CONTACT_NUMBER" name="site_CONTACT_NUMBER" type="number"></ion-input>
         </ion-item>
 
       </div>
-      <ion-item>
-        <ion-label color="selva">Reference</ion-label>
-        <ion-label color="selva" *ngIf="showReferenceDetails" text-right>Add</ion-label>
-        <ion-label color="selva" *ngIf="!showReferenceDetails" text-right>Later</ion-label>
-        <ion-toggle color="danger" [checked]="showReferenceDetails" (ionChange)="referenceOption()" required>
-        </ion-toggle>
-      </ion-item>
-      <div *ngIf="showReferenceDetails">
-        <ion-item>
-          <ion-label color="selva" stacked floating>Type</ion-label>
-          <!-- <ion-select [(ngModel)]="customers.reference_ID.type" name="reference_ID.type" [compareWith]=""> -->
-          <ion-select [(ngModel)]="customers.reference.referer_TYPE" name="customers.referer_TYPE" [compareWith]="">
-            <ion-option *ngFor="let type of reference_types" [value]="type.name">{{type.name}} </ion-option>
-          </ion-select>
-        </ion-item>
-        <ion-item>
-        <ion-label color="selva" stacked stacked>Name</ion-label>
-        <ion-input [(ngModel)]="customers.reference.refrer_NAME" name="refrer_NAME" type="text"></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-label color="selva" stacked>Contact Number</ion-label>
-        <ion-input [(ngModel)]="customers.reference.referer_MOBILE1" name="referer_MOBILE1" type="number"></ion-input>
-      </ion-item>
 
-      </div>
       <button ion-button block type="submit" (click)="onSubmitCustomer(customers)">
         Submit
       </button>
@@ -158,6 +140,48 @@
     </ion-list>
   </div>
 
+
+  <div [ngSwitch]="category">
+    <ion-list *ngSwitchCase="'view'">
+
+      <!-- this fab is placed at bottom right -->
+      <!-- <ion-fab center middle>
+          <button ion-fab color="danger"><ion-icon name="md-share"></ion-icon></button>
+          <ion-fab-list side="top">
+            <button ion-fab color="primary"><ion-icon name="logo-vimeo"></ion-icon></button>
+          </ion-fab-list>
+          <ion-fab-list side="bottom">
+            <button ion-fab color="secondary"><ion-icon name="logo-facebook"></ion-icon></button>
+          </ion-fab-list>
+          <ion-fab-list side="left">
+            <button ion-fab color="light"><ion-icon name="logo-googleplus"></ion-icon></button>
+          </ion-fab-list>
+          <ion-fab-list side="right">
+            <button ion-fab color="dark"><ion-icon name="logo-twitter"></ion-icon></button>
+          </ion-fab-list>
+        </ion-fab> -->
+      <ion-fab right bottom>
+        <button ion-fab color="primary">
+          <ion-icon name="add"></ion-icon>
+        </button>
+        <ion-fab-list side="top">
+          <button ion-fab color="secondary" (click)="onClick('Site')">
+            <ion-icon name="home"></ion-icon>
+          </button>
+          <button ion-fab color="primary" (click)="onClick('Follow up')">
+            <ion-icon name="eye"></ion-icon>
+          </button>
+          <button ion-fab color="selva" (click)="onClick('Reference')">
+            <ion-icon name="contacts"></ion-icon>
+          </button>
+          <!-- <ion-icon color="selva" ios="ios-construct" md="md-construct"></ion-icon> -->
+          <!-- <button ><ion-icon color="selva" ios="ios-contacts" md="md-contacts"></ion-icon></button> -->
+        </ion-fab-list>
+      </ion-fab>
+      <div> This is the - {{page_name}} page - under construction.....
+      </div>
+    </ion-list>
+  </div>
 </ion-content>
 <!-- <ion-header>
   <ion-navbar>
@@ -166,7 +190,6 @@
     </ion-title>
   </ion-navbar>
 </ion-header>
-
 <ion-header>
   <ion-navbar>
     <ion-title>Ionic Demo</ion-title>
