--- a/src/pages/estimate/estimate.html
+++ b/src/pages/estimate/estimate.html
@@ -521,7 +521,8 @@
                 <ion-label color="selva">Tax </ion-label>
                 <ion-label>{{displayINR(estimate.estimation.totalTax)}}</ion-label>
               </ion-item>
-              <ion-item *ngIf="showTransportCost">
+              <!-- <ion-item *ngIf="showTransportCost"> -->
+              <ion-item>
                 <ion-label color="selva">Transport Cost </ion-label>
                 <ion-label>{{displayINR(estimate.estimation.totalTransportCost)}}</ion-label>
               </ion-item>
